# vulkan_eng

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md  myconfig.config  shader_compile.bat  vcpkg_rf.txt  vulkan_eng.sln
shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  ray_tracing.fr  ray_tracing.vt  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  simple_shader_spec.frag  simple_shader_spec.vert  textured_simple_shader.frag  textured_simple_shader.frag.spv  textured_simple_shader.vert
src/: main.cpp
src/application/: profiler.h  vs_app.cpp  vs_app.h  vs_camera.cpp  vs_camera_movement_component.cpp  vs_camera_movement_component.h
src/application/ecs/: vs_component.h  vs_ecs.cpp  vs_ecs.h  vs_entity.h  vs_game_object.cpp  vs_game_object.h  vs_model_component.cpp  vs_model_component.h  vs_texture.cpp  vs_texture.h  vs_transform_component.cpp
src/assetlib/: vs_asset.cpp  vs_asset.h  vs_asset_manager.cpp  vs_asset_manager.h  vs_assets_loader.cpp  vs_assets_loader.h  vs_model_component.cpp  vs_model_component.h  vs_texture.cpp  vs_texture.h
src/engine/: vs_app.cpp  vs_app.h  vs_frame_info.h  vs_point_light_render_system.cpp  vs_point_light_render_system.h  vs_point_light_system.h  vs_simple_physics_system.cpp  vs_simple_physics_system.h  vs_simple_render_system.cpp
src/engine/ecs/: vs_component.h  vs_ecs.cpp  vs_ecs.h  vs_entity.h  vs_game_object.h  vs_transform_component.cpp  vs_transform_component.h
src/engine/render_systems/: vs_point_light_render_system.cpp  vs_point_light_render_system.h  vs_simple_render_system.cpp  vs_simple_render_system.h
src/engine/renderer/: vs_buffer.cpp  vs_buffer.h  vs_descriptors.cpp  vs_descriptors.h  vs_device.cpp  vs_device.h  vs_frame_info.h  vs_pipeline.cpp  vs_pipeline.h  vs_renderer.cpp  vs_renderer.h  vs_swap_chain.cpp  vs_swap_chain.h  vs_window.cpp  vs_window.h
src/game/: profiler.h  vs_app.cpp  vs_app.h  vs_asset_manager.cpp  vs_asset_manager.h  vs_camera.cpp  vs_camera.h  vs_camera_movement_component.cpp  vs_game_object.cpp  vs_game_object.h  vs_model.cpp  vs_model.h  vs_model_component.cpp  vs_model_component.h  vs_model_loader.cpp  vs_model_loader.h  vs_movement_component.cpp  vs_rigid_body_component.h  vs_texture.cpp  vs_texture.h
src/game/ecs/: vsEcs.cpp  vsEcs.h  vs_component.h  vs_entity.h  vs_game_object.h  vs_model_component.cpp  vs_model_component.h  vs_movement_component.h  vs_texture.cpp  vs_texture.h
vulkan_test/: .env  CMakeLists.txt  compile_shaders.ps1  pipeline_config_info_t.h  shader_compile.bat  vs_app.cpp  vs_app.h  vs_device.cpp  vs_device.h  vs_frame_info.h  vs_game_object.cpp  vs_game_object.h  vs_matrix.h  vs_model.cpp  vs_model.h  vs_movement_component.cpp  vs_movement_component.h  vs_pipeline.cpp  vs_pipeline.h  vs_renderer.h  vs_simple_render_system.cpp  vs_simple_render_system.h  vs_swap_chain.cpp  vs_swap_chain.h  vs_triangles.h  vs_window.cpp  vs_window.h  vulkan_test.vcxproj  vulkan_test.vcxproj.filters
vulkan_test/models/: cube.mtl  smooth_vase.mtl
vulkan_test/models/cornell_box/: CornellBox-Sphere.mtl
vulkan_test/models/sponza/: sponza.mtl
vulkan_test/shaders/: a.spv  compile.sh  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  test.frag  test.vert  test.vert.spv
vulkan_test/src/: main.cpp  vs_app.cpp  vs_app.h  vs_descriptors.h  vs_frame_info.h  vs_game_object.h  vs_model.cpp  vs_model.h  vs_movement_component.cpp  vs_movement_component.h  vs_utils.h
vulkan_test/src/engine/: vs_app.cpp  vs_app.h  vs_frame_info.h
vulkan_test/src/engine/render_systems/: vs_point_light_system.cpp
vulkan_test/src/engine/renderer/: vs_buffer.cpp  vs_descriptors.cpp  vs_pipeline.cpp  vs_renderer.h  vs_window.cpp
vulkan_test/src/game/components/: vs_model.cpp  vs_model.h  vs_movement_component.h
vulkan_test/src/game/entities/: vs_game_object.h
vulkan_test/src/render_systems/: vs_point_light_system.cpp  vs_point_light_system.h  vs_simple_render_system.h
vulkan_test/src/renderer/: vs_device.h  vs_pipeline.cpp  vs_renderer.cpp  vs_renderer.h  vs_swap_chain.cpp  vs_swap_chain.h
